fix image on safari

--- a/src/App.scss
+++ b/src/App.scss
@@ -645,29 +645,29 @@ svg {
         position: absolute;
         padding-bottom: 20px;
         display: flex;
-        overflow: auto;
+        overflow-x: auto;
+        overflow-y: hidden;
         scroll-snap-type: x proximity;
         width: 100%;
         height: 100%;
         z-index: 2;
-      }
 
-      .image-container {
-        margin: 20px 20px 0 20px;
-        flex-shrink: 0;
-        .image-layout {
-          position: relative;
+        .image-container {
+          margin: 20px 20px 0 20px;
+          padding-bottom: 20px;
+          box-sizing: border-box;
+          flex-shrink: 0;
           height: 100%;
-          border-radius: 5px;
-          box-shadow: 4px 6px 16px rgba(0, 0, 0, 0.3);
-          overflow: hidden;
-          img {
+
+          .image-layout {
             height: 100%;
-            //position: absolute;
-            top: 0;
-            left: 0;
-            right: 0;
-            bottom: 0;
+            border-radius: 5px;
+            box-shadow: 4px 6px 16px rgba(0, 0, 0, 0.3);
+            overflow: hidden;
+
+            img {
+              height: 100%;
+            }
           }
         }
       }
